V 1.0.0.2 1 增加 Report.cs 来定义报头(Head) 或 终端(End)； 2 根据基恩士扫描头配置程序的设计灵感, 为发送信息增加报头(Head)和终端(End)信息; 3 优化发送逻辑：根据本次增加的报头和终端修改发送逻辑，不再采用 WriteLine方式进行发送 4 优化接收逻辑：由于ReadLine方法可能由于设备不发送结束符而导致程序无止境的等待，故不再使用ReadLine方法进行数据 5 界面优化
=========================================================
待处理 ：本次版本未开发 报头(Head)和终端(End)的自定义功能

--- a/SerialPortSender/SerialPortSender.csproj
+++ b/SerialPortSender/SerialPortSender.csproj
@@ -13,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Report.cs" />
     <Compile Include="DataModel.cs" />
     <Compile Include="FrmSerialPortSender.cs">
       <SubType>Form</SubType>
