--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,8 @@ $RECYCLE.BIN/
 
 # VisualStudioCode
 .vscode
+/.vs/SerialPortSender.Solution/DesignTimeBuild/.dtbcache
+/.vs/SerialPortSender.Solution/v15/Server/sqlite3/db.lock
+/.vs/SerialPortSender.Solution/v15/Server/sqlite3/storage.ide
+/.vs/SerialPortSender.Solution/v15/Server/sqlite3/storage.ide-shm
+/.vs/SerialPortSender.Solution/v15/Server/sqlite3/storage.ide-wal
