--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,4 @@ $RECYCLE.BIN/
 /.vs/SerialPortSender.Solution/v15/Server/sqlite3/storage.ide
 /.vs/SerialPortSender.Solution/v15/Server/sqlite3/storage.ide-shm
 /.vs/SerialPortSender.Solution/v15/Server/sqlite3/storage.ide-wal
+/.vs/SerialPortSender.Solution/v16/Server/sqlite3
