--- a/SerialPortSender/packages.config
+++ b/SerialPortSender/packages.config
@@ -3,5 +3,5 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net40" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net40" />
   <package id="System.Data.SQLite.Core" version="1.0.113.6" targetFramework="net40" />
-  <package id="Util.HowesDOMO" version="1.0.16" targetFramework="net40" />
+  <package id="Util.HowesDOMO" version="1.0.17-beta4" targetFramework="net40" />
 </packages>
